--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 读书笔记
 SEOTitle: 三叶草国际语 - 让沟通更容易
 header-img: img/post-bg-desk.jpg
-email: klovien@gmail.com
+email: wenshuo_wang@yeah.net
 description: "在舒适圈的边缘不断试探"
 keyword: "思想，交流，碰撞"
 url: "https://wwsbh.github.io"          # your host, for absolute URL
