--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 读书笔记
 SEOTitle: 读书笔记
 header-img: img/post-bg-desk.jpg
 email: wenshuo_wang@yeah.net
-description: "在舒适圈的边缘不断试探"
+description: "在舒适圈边缘不断试探"
 keyword: "思想 交流 碰撞"
 url: "https://wwsbh.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
